updated translation and adsense compliance

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
   "title": "Contador de Palabras",
-  "placeholder": "Escribe o pega tu texto aquí...",
+  "placeholder": "Escriba o pegue su texto aquí...",
   "clearText": "Limpiar Texto",
   "exportTxt": "Exportar como TXT",
   "words": "Palabras",
@@ -10,21 +10,180 @@
   "readingTime": "Tiempo de Lectura (minutos)",
   "keywordDensity": "Densidad de Palabras Clave",
   "aboutUs": "Sobre Nosotros",
-  "aboutText": "Esta es una sencilla aplicación de contador de palabras creada con React y Material-UI.",
-  "contactUs": "Contáctanos",
-  "contactText": "¿Tienes preguntas o comentarios? Rellena el siguiente formulario para ponerte en contacto con nosotros.",
+  "aboutText": "Esta es una aplicación simple de contador de palabras construida con React y Material-UI.",
+  "contactUs": "Contáctenos",
+  "contactText": "¿Tiene preguntas o comentarios? Complete el formulario a continuación para comunicarse con nosotros.",
   "nameLabel": "Nombre",
   "emailLabel": "Correo Electrónico",
   "messageLabel": "Mensaje",
   "submitButton": "Enviar",
   "wordCounter": "Contador de Palabras",
-  "about": "Sobre nosotros",
+  "about": "Acerca de",
   "contact": "Contacto",
+  "resources": "Recursos",
+  "privacyPolicy": "Política de Privacidad",
+  "termsOfService": "Términos de Servicio",
   "howToUse": {
     "title": "Cómo Usar",
-    "step1": "Pega tu texto en el área de texto.",
-    "step2": "Obtén información instantánea sobre el recuento de palabras, caracteres y más.",
-    "step3": "Exporta tu texto como un archivo .txt.",
-    "step4": "Limpia el área de texto para empezar de nuevo."
-  }
+    "step1": "Pegue su texto en el área de texto.",
+    "step2": "Obtenga información instantánea sobre recuento de palabras, caracteres y más.",
+    "step3": "Exporte su texto como un archivo .txt.",
+    "step4": "Limpie el área de texto para comenzar de nuevo."
+  },
+  "freeWordCounterOnline": "Contador de Palabras Gratis en Línea - Contar Palabras, Caracteres, Frases",
+  "freeWordCounterDescription": "Herramienta gratuita de contador de palabras en línea. Cuente palabras, caracteres, frases, párrafos, tiempo de lectura y densidad de palabras clave. Análisis de texto rápido y preciso para estudiantes, escritores y profesionales.",
+  "bestFreeTool": "La mejor herramienta en línea gratuita para contar palabras, caracteres, frases, párrafos, tiempo de lectura y densidad de palabras clave.",
+  "writingTips": "Consejos de Escritura",
+  "seoContentOptimization": "Optimización de Contenido SEO",
+  "textAnalysisTechniques": "Técnicas de Análisis de Texto",
+  "aboutOurTool": "Sobre Nuestra Herramienta",
+  "learnMoreAboutTextAnalysis": "Más Información Sobre Análisis de Texto",
+  "relatedResources": "Recursos Relacionados",
+  "learnMore": "Más Información",
+  "useOurTool": "Usar Nuestra Herramienta",
+  "writingGuides": "Guías de Escritura",
+  "exploreOurToolsResources": "Explorar Nuestras Herramientas y Recursos",
+  "navigateOurSite": "Navegar Por Nuestro Sitio",
+  "exploreOurWebsite": "Explorar Nuestro Sitio Web",
+  "completeGuide": "Guía Completa de Contadores de Palabras y Análisis de Texto",
+  "professionalWritingTips": "Consejos profesionales de escritura, técnicas de análisis de texto y estrategias de optimización de contenido.",
+  "importanceOfWordCount": "La Importancia del Recuento de Palabras en la Escritura",
+  "wordCountInfo": "Ya sea que esté escribiendo un trabajo académico, una publicación de blog o un documento profesional, comprender el recuento de palabras es crucial. Diferentes contextos requieren diferentes longitudes:",
+  "blogPosts": "Publicaciones de blog",
+  "blogPostsInfo": "Por lo general, oscilan entre 1.000 y 2.500 palabras para un SEO óptimo",
+  "academicPapers": "Trabajos académicos",
+  "academicPapersInfo": "A menudo tienen límites estrictos de palabras establecidos por las instituciones",
+  "socialMedia": "Redes sociales",
+  "socialMediaInfo": "Twitter tiene un límite de 280 caracteres, mientras que las publicaciones de LinkedIn funcionan bien hasta 1.300 palabras",
+  "emails": "Correos electrónicos",
+  "emailsInfo": "Manténgalos concisos, idealmente menos de 200 palabras para una mejor participación",
+  "howToUseWordCounter": "Cómo Usar Efectivamente un Contador de Palabras",
+  "wordCounterUtility": "Un contador de palabras es más que solo una herramienta simple de conteo. Así es como maximizar su utilidad:",
+  "planYourContent": "Planifique su contenido",
+  "setWordTargets": "Establezca objetivos de palabras antes de comenzar a escribir",
+  "checkLengthRequirements": "Verifique los requisitos de longitud",
+  "ensureContentMeetsGuidelines": "Asegúrese de que su contenido cumpla con las pautas de presentación",
+  "analyzeReadingTime": "Analice el tiempo de lectura",
+  "knowHowLongContentTakes": "Conozca cuánto tiempo tomará leer su contenido",
+  "optimizeForSeo": "Optimice para SEO",
+  "meetRecommendedWordCounts": "Cumpla con los recuentos recomendados de palabras para motores de búsqueda",
+  "trackProgress": "Seguimiento del progreso",
+  "monitorWritingPace": "Monitoree su ritmo y productividad de escritura",
+  "writingTipsBasedOnTextAnalysis": "Consejos de Escritura Basados en Análisis de Texto",
+  "textCompositionHelps": "Comprender la composición de su texto puede ayudar a mejorar su escritura:",
+  "sentenceLength": "Longitud de la frase",
+  "mixShortAndLong": "Combine frases cortas y largas para una mejor legibilidad",
+  "paragraphStructure": "Estructura del párrafo",
+  "aimForSentences": "Apunte a 3-5 frases por párrafo para una lectura fácil",
+  "keywordDensity": "Densidad de palabras clave",
+  "keepItNatural": "Manténgalo natural - típicamente 1-2% para fines de SEO",
+  "readingLevel": "Nivel de lectura",
+  "adjustForAudience": "Ajuste la complejidad según su público objetivo",
+  "textAnalysisForContentTypes": "Análisis de Texto para Diferentes Tipos de Contenido",
+  "academicWriting": "Escritura Académica",
+  "academicWritingInfo": "Enfoque en mantener límites adecuados de palabras, verificar redundancias y garantizar terminología consistente. Los trabajos académicos a menudo requieren recuentos específicos de palabras y estructura.",
+  "blogArticles": "Publicaciones de Blog y Artículos",
+  "blogArticlesInfo": "Apunte a 1.500-2.500 palabras para un rendimiento óptimo de SEO. Verifique su densidad de palabras clave y tiempo de lectura para asegurar que su contenido sea sustancial y atractivo.",
+  "businessDocuments": "Documentos Comerciales",
+  "businessDocumentsInfo": "Mantenga las comunicaciones comerciales concisas. Use herramientas para asegurar que sus documentos sean lo más breves posible mientras aún transmiten toda la información necesaria.",
+  "bestPracticesForWriting": "Mejores Prácticas para Escritura Efectiva",
+  "implementingPractices": "Implementar estas prácticas mejorará la calidad de su escritura:",
+  "knowYourAudience": "Conozca a su público",
+  "tailorWordChoice": "Adapte su elección de palabras y tono en consecuencia",
+  "setClearObjectives": "Establezca objetivos claros",
+  "definePurpose": "Defina el propósito de su escritura desde el principio",
+  "useActiveVoice": "Use voz activa",
+  "generallyMoreConcise": "Generalmente es más conciso y fácil de entender",
+  "editRuthlessly": "Edite sin piedad",
+  "removeRedundantWords": "Elimine palabras y frases redundantes",
+  "reviewAndRefine": "Revise y refine",
+  "checkMetricsBeforePublishing": "Verifique el recuento de palabras y otras métricas antes de publicar",
+  "readingTimeAndEngagement": "Tiempo de Lectura y Participación",
+  "averageReadingTime": "El tiempo promedio de lectura es de aproximadamente 200 palabras por minuto. Comprender esto le ayuda a establecer expectativas:",
+  "quickRead": "Lectura rápida",
+  "quickReadTime": "2-3 minutos",
+  "mediumRead": "Lectura media",
+  "mediumReadTime": "3-5 minutos",
+  "inDepthRead": "Lectura profunda",
+  "inDepthReadTime": "5+ minutos",
+  "considerAudienceAttention": "Considere la atención de su público al crear contenido para optimizar la participación.",
+  "seoAndContentOptimization": "SEO y Optimización de Contenido",
+  "significantlyImproveContent": "Usar herramientas de análisis de texto puede mejorar significativamente el rendimiento de su contenido:",
+  "maintainSearchRankings": "Mantenga 1-2% para mejores posiciones en motores de búsqueda",
+  "targetWordCount": "Apunte a 1.500-2.500 palabras para temas profundos",
+  "varySentenceLength": "Varíe la longitud de las frases para mantener el interés del lector",
+  "useHeadingsParagraphs": "Use encabezados y párrafos para mejorar la capacidad de exploración",
+  "freeWordCounterTool": "Herramienta Gratuita de Contador de Palabras",
+  "aboutOurService": "Acerca de Nuestro Servicio",
+  "contactUs": "Contáctenos",
+  "termsOfService": "Términos de Servicio",
+  "writingResources": "Recursos de Escritura",
+  "aboutUs": "Sobre Nosotros",
+  "privacyPolicy": "Política de Privacidad",
+  "wordCounterGuide": "Guía de Contador de Palabras: Consejos de Escritura y Recursos de Análisis de Texto",
+  "completeGuideDescription": "Guía completa sobre el uso de contadores de palabras y herramientas de análisis de texto. Aprenda técnicas de escritura, mejores prácticas de SEO y cómo optimizar contenido con nuestras herramientas en línea gratuitas.",
+  "textAnalysisMadeSimple": "Análisis de Texto Simplificado",
+  "accurateFastEasyToUse": "Análisis de texto preciso, rápido y fácil de usar para estudiantes, escritores y profesionales. Cuente palabras, caracteres y más.",
+  "completelyFree": "Esta herramienta es completamente gratuita de usar sin necesidad de registrarse. Simplemente pegue su texto en el campo y obtenga resultados instantáneos.",
+  "freeWordCounterSupport": "Soporte de Nuestra Herramienta Gratuita de Contador de Palabras",
+  "supportForQuestions": "Contáctenos para preguntas sobre nuestra herramienta gratuita de contador de palabras. Estamos aquí para ayudarle con cualquier consulta sobre análisis de texto, conteo de palabras y optimización de contenido.",
+  "questionsSuggestionsFeedback": "Ya sea que tenga preguntas sobre nuestra herramienta gratuita de contador de palabras, sugerencias para características o comentarios sobre su experiencia, nos encantaría escucharle.",
+  "visitResourcesForHelp": "Para ayuda en el uso del contador de palabras, visite nuestra página de recursos para guías y consejos.",
+  "allRightsReserved": "Todos los derechos reservados",
+  "privacyPolicyTitle": "Política de Privacidad - Herramienta de Contador de Palabras Gratuita",
+  "privacyPolicyDescription": "Nuestra política de privacidad para la herramienta gratuita de contador de palabras. No recopilamos información personal y todo el procesamiento de texto ocurre localmente en su navegador.",
+  "noPersonalInformation": "Nuestra aplicación Contador de Palabras no recopila ninguna información personal de los usuarios. Todo el procesamiento de texto ocurre localmente en su navegador y no se envía a ningún servidor.",
+  "sinceNoInformation": "Dado que no recopilamos información personal, no usamos su información de ninguna manera. La entrada de texto permanece en su navegador y no se almacena ni transmite a ninguna parte.",
+  "dataSecurity": "Seguridad de Datos",
+  "dataSecurityInfo": "Priorizamos su privacidad y seguridad de datos. Todo el análisis de texto ocurre localmente en su navegador. Ningún dato se transfiere a nuestros servidores o servicios de terceros.",
+  "thirdPartyServices": "Servicios de Terceros",
+  "thirdPartyInfo": "Esta aplicación usa servicios de terceros incluyendo Google Analytics y Google AdSense. Estos servicios pueden recopilar información de acuerdo con sus respectivas políticas de privacidad.",
+  "cookiesInfo": "Nuestra aplicación puede usar cookies para almacenar preferencias y analizar el tráfico del sitio. Puede elegir deshabilitar las cookies a través de la configuración de su navegador.",
+  "changesToPolicy": "Cambios a Esta Política",
+  "changesInfo": "Podemos actualizar nuestra Política de Privacidad ocasionalmente. Se le notificará de cualquier cambio publicando la nueva Política de Privacidad en esta página.",
+  "contactForQuestions": "Si tiene alguna pregunta sobre esta Política de Privacidad, por favor contáctenos a través de la página de Contacto.",
+  "termsOfServiceTitle": "Términos de Servicio - Herramienta de Contador de Palabras Gratuita",
+  "termsDescription": "Términos de servicio para nuestra herramienta gratuita de contador de palabras. Al usar nuestro servicio, acepta estos términos y condiciones de uso.",
+  "agreementToTerms": "Acuerdo a Términos",
+  "agreementInfo": "Al acceder y usar esta aplicación Contador de Palabras, usted acepta y está de acuerdo en quedar sujeto a estos Términos de Servicio y nuestra Política de Privacidad.",
+  "useLicense": "Licencia de Uso",
+  "useLicenseInfo": "Se otorga permiso para descargar temporalmente una copia de los materiales en nuestra aplicación para visualización transitoria personal y no comercial.",
+  "disclaimer": "Descargo de Responsabilidad",
+  "disclaimerInfo": "Los materiales en nuestra aplicación se proporcionan en base 'tal cual'. No hacemos garantías, expresas o implícitas, y por la presente rechazamos y anulamos todas las demás garantías incluyendo, sin limitación, garantías implícitas o condiciones de comerciabilidad, idoneidad para un propósito particular, o no infracción de propiedad intelectual u otras violaciones de derechos.",
+  "limitations": "Limitaciones",
+  "limitationInfo": "En ningún caso nosotros o nuestros proveedores seremos responsables de ningún daño (incluyendo, sin limitación, daños por pérdida de datos o ganancias, o debido a interrupción del negocio) que surja del uso o la imposibilidad de usar la aplicación.",
+  "accuracyOfMaterials": "Precisión de Materiales",
+  "accuracyInfo": "Las herramientas de análisis de texto proporcionadas en esta aplicación son solo para información general. No garantizamos la integridad, precisión o confiabilidad de los resultados del análisis.",
+  "changes": "Cambios",
+  "changesTermsInfo": "Nos reservamos el derecho de modificar estos términos en cualquier momento. Su uso continuado de la aplicación después de cualquier cambio constituye aceptación de esos cambios.",
+  "contactInfo": "Información de Contacto",
+  "contactInfoText": "Si tiene alguna pregunta sobre estos Términos de Servicio, por favor contáctenos a través de la página de Contacto.",
+  "cookieConsent": {
+    "bannerText": "Usamos cookies para mejorar su experiencia y con fines publicitarios. Puede personalizar sus preferencias o aceptar todas las cookies.",
+    "acceptAll": "Aceptar Todo",
+    "customize": "Personalizar Preferencias",
+    "rejectAll": "Rechazar Todo",
+    "learnMore": "Más información sobre nuestra política de cookies"
+  },
+  "consentManagement": {
+    "title": "Preferencias de Privacidad",
+    "description": "Administre sus preferencias de privacidad. Puede cambiar esta configuración en cualquier momento.",
+    "necessary": "Cookies Esenciales",
+    "necessaryDescription": "Estas cookies son necesarias para que el sitio web funcione y no se pueden desactivar.",
+    "analytics": "Cookies de Análisis",
+    "analyticsDescription": "Estas cookies nos permiten contar visitas y fuentes de tráfico para medir y mejorar el rendimiento de nuestro sitio.",
+    "advertising": "Cookies Publicitarias",
+    "advertisingDescription": "Estas cookies pueden ser establecidas a través de nuestro sitio por nuestros socios publicitarios para crear un perfil de sus intereses.",
+    "savePreferences": "Guardar Preferencias",
+    "acceptAll": "Aceptar Todo",
+    "rejectAll": "Rechazar Todo"
+  },
+  "cookies": "Cookies",
+  "english": "English",
+  "spanish": "Español",
+  "french": "Français",
+  "hindi": "हिन्दी",
+  "german": "Deutsch",
+  "japanese": "日本語",
+  "chinese": "中文"
 }
