--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,30 +1,73 @@
+
 {
-  "title": "Compteur de Mots",
-  "placeholder": "Saisissez ou collez votre texte ici...",
-  "clearText": "Effacer le Texte",
-  "exportTxt": "Exporter en TXT",
-  "words": "Mots",
-  "characters": "Caractères",
-  "sentences": "Phrases",
-  "paragraphs": "Paragraphes",
-  "readingTime": "Temps de Lecture (minutes)",
-  "keywordDensity": "Densité des Mots-clés",
-  "aboutUs": "À Propos de Nous",
-  "aboutText": "Ceci est une simple application de compteur de mots construite avec React et Material-UI.",
-  "contactUs": "Contactez-Nous",
-  "contactText": "Vous avez des questions ou des commentaires ? Remplissez le formulaire ci-dessous pour nous contacter.",
-  "nameLabel": "Nom",
-  "emailLabel": "E-mail",
-  "messageLabel": "Message",
-  "submitButton": "Envoyer",
-  "wordCounter": "Compteur de Mots",
-  "about": "À propos",
-  "contact": "Contact",
-  "howToUse": {
-    "title": "Comment Utiliser",
-    "step1": "Collez votre texte dans la zone de texte.",
-    "step2": "Obtenez des informations instantanées sur le nombre de mots, de caractères et plus encore.",
-    "step3": "Exportez votre texte en tant que fichier .txt.",
-    "step4": "Effacez la zone de texte pour recommencer."
-  }
+    "wordCounter": "Compteur de Mots",
+    "characterCount": "Nombre de Caractères",
+    "wordCount": "Nombre de Mots",
+    "sentenceCount": "Nombre de Phrases",
+    "paragraphCount": "Nombre de Paragraphes",
+    "readingTime": "Temps de Lecture",
+    "keywordDensity": "Densité des Mots-clés",
+    "clearText": "Effacer le Texte",
+    "howToUse": "Comment Utiliser",
+    "howToUseText": "Commencez simplement à taper ou collez votre texte dans la zone de texte ci-dessus pour obtenir une analyse instantanée. Le nombre de mots, le nombre de caractères et d'autres mesures seront mis à jour en temps réel. Vous pouvez également basculer entre les modes clair et sombre et changer la langue de l'interface.",
+    "about": "À Propos de Nous",
+    "aboutText": "Cette application de compteur de mots est un outil simple et puissant pour analyser votre texte. Elle fournit une variété de mesures pour vous aider à mieux comprendre votre écriture. Que vous soyez étudiant, écrivain ou professionnel, cet outil peut vous aider à améliorer votre écriture et à atteindre vos objectifs.",
+    "contactUs": "Contactez-Nous",
+    "contactText": "Si vous avez des questions, des commentaires ou des suggestions, n'hésitez pas à nous contacter. Nous serions ravis de vous entendre !",
+    "nameLabel": "Nom",
+    "emailLabel": "E-mail",
+    "messageLabel": "Message",
+    "submitButton": "Soumettre",
+    "cookieConsent": {
+        "bannerText": "Nous utilisons des cookies pour améliorer votre expérience, analyser le trafic et diffuser des publicités personnalisées. En continuant à utiliser notre site, vous acceptez notre utilisation des cookies conformément à notre Politique de Cookies.",
+        "acceptAll": "Tout accepter",
+        "customize": "Personnaliser",
+        "rejectAll": "Tout refuser",
+        "learnMore": "En savoir plus"
+    },
+    "consentManagement": {
+        "title": "Préférences relatives aux cookies",
+        "description": "Gérez vos préférences de consentement pour différents types de cookies ci-dessous. Les cookies nécessaires sont toujours activés pour garantir la fonctionnalité de base.",
+        "necessary": "Cookies nécessaires",
+        "necessaryDescription": "Ces cookies sont essentiels au bon fonctionnement du site Web et ne peuvent pas être désactivés. Ils sont généralement définis en réponse aux actions que vous effectuez et qui constituent une demande de services, tels que le paramétrage de vos préférences de confidentialité, la connexion ou le remplissage de formulaires.",
+        "analytics": "Cookies analytiques",
+        "analyticsDescription": "Ces cookies nous permettent de comptabiliser les visites et les sources de trafic afin de mesurer et améliorer les performances de notre site. Ils nous aident à savoir quelles pages sont les plus et les moins populaires et à voir comment les visiteurs naviguent sur le site.",
+        "advertising": "Cookies publicitaires",
+        "advertisingDescription": "Ces cookies peuvent être placés via notre site par nos partenaires publicitaires et sont utilisés pour créer un profil de vos centres d'intérêt afin de vous proposer des publicités pertinentes. Ils ne stockent pas directement d'informations personnelles, mais sont basés sur l'identification unique de votre navigateur et de votre appareil Internet.",
+        "rejectAll": "Tout refuser",
+        "acceptAll": "Tout accepter",
+        "savePreferences": "Enregistrer les préférences"
+    },
+    "privacyPolicy": "Politique de confidentialité",
+    "privacyPolicyTitle": "Politique de confidentialité - Outil de comptage de mots",
+    "privacyPolicyDescription": "Découvrez comment nous collectons, utilisons et protégeons vos informations lorsque vous utilisez notre outil gratuit de comptage de mots.",
+    "effectiveDate": "Date d'entrée en vigueur",
+    "section1Title": "Informations que nous collectons",
+    "noPersonalInformation": "Nous ne collectons aucune information personnelle identifiable vous concernant lorsque vous utilisez notre site Web. L'outil de comptage de mots fonctionne entièrement dans votre navigateur Web - tous les traitements ont lieu localement sur votre appareil.",
+    "section2Title": "Comment nous utilisons les informations",
+    "sinceNoInformation": "Puisque nous ne collectons aucune information personnelle, nous n'utilisons aucune information personnelle vous concernant.",
+    "dataSecurity": "Sécurité des données",
+    "dataSecurityInfo": "Vos données textuelles restent dans votre navigateur et ne sont jamais transmises à nos serveurs ou à des tiers. Lorsque vous utilisez notre outil de comptage de mots, votre texte reste sur votre appareil local et n'est stocké nulle part.",
+    "thirdPartyServices": "Services de tiers",
+    "thirdPartyInfo": "Nous pouvons utiliser des services tiers tels que Google Analytics et Google AdSense. Ces services peuvent collecter des informations sur votre utilisation de notre site Web et peuvent utiliser des cookies pour suivre votre activité en ligne sur différents sites.",
+    "cookiesInfo": "Comme de nombreux sites Web, nous utilisons des cookies et des technologies de suivi similaires pour suivre l'activité sur notre site Web et stocker certaines informations. Notre site Web utilise des cookies à diverses fins, notamment essentielles, analytiques et publicitaires.",
+    "changesToPolicy": "Modifications de cette Politique de confidentialité",
+    "changesInfo": "Nous pouvons mettre à jour notre Politique de confidentialité de temps à autre. Nous vous informerons de tout changement en publiant la nouvelle Politique de confidentialité sur cette page et en mettant à jour la date d'entrée en vigueur en haut de cette page.",
+    "contactUs": "Contactez-nous",
+    "contactForQuestions": "Si vous avez des questions sur cette Politique de confidentialité, veuillez nous contacter via notre",
+    "page": "page",
+    "navigateOurSite": "Naviguer sur notre site",
+    "freeWordCounterTool": "Outil gratuit de comptage de mots",
+    "aboutUs": "À propos de nous",
+    "writingResources": "Ressources d'écriture",
+    "termsOfService": "Conditions d'utilisation",
+    "contact": "Contact",
+    "cookies": "Cookies",
+    "english": "English",
+    "spanish": "Español",
+    "french": "Français",
+    "hindi": "हिन्दी",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "chinese": "中文"
 }
