--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1,30 +1,73 @@
+
 {
-  "title": "शब्द गणक",
-  "placeholder": "अपना टेक्स्ट यहां टाइप या पेस्ट करें...",
-  "clearText": "टेक्स्ट साफ़ करें",
-  "exportTxt": "TXT के रूप में निर्यात करें",
-  "words": "शब्द",
-  "characters": "अक्षर",
-  "sentences": "वाक्य",
-  "paragraphs": "पैराग्राफ",
-  "readingTime": "पढ़ने का समय (मिनट)",
-  "keywordDensity": "कीवर्ड घनत्व",
-  "aboutUs": "हमारे बारे में",
-  "aboutText": "यह रिएक्ट और मटेरियल-यूआई के साथ बनाया गया एक सरल शब्द गणक एप्लिकेशन है।",
-  "contactUs": "हमसे संपर्क करें",
-  "contactText": "प्रश्न या प्रतिक्रिया है? हमसे संपर्क करने के लिए नीचे दिया गया फ़ॉर्म भरें।",
-  "nameLabel": "नाम",
-  "emailLabel": "ईमेल",
-  "messageLabel": "संदेश",
-  "submitButton": "जमा करें",
-  "wordCounter": "शब्द गणक",
-  "about": "हमारे बारे में",
-  "contact": "संपर्क करें",
-  "howToUse": {
-    "title": "कैसे उपयोग करें",
-    "step1": "टेक्स्ट क्षेत्र में अपना टेक्स्ट पेस्ट करें।",
-    "step2": "शब्द गणना, वर्ण गणना, और बहुत कुछ पर तुरंत जानकारी प्राप्त करें।",
-    "step3": "अपने टेक्स्ट को .txt फ़ाइल के रूप में निर्यात करें।",
-    "step4": "फिर से शुरू करने के लिए टेक्स्ट क्षेत्र को साफ़ करें।"
-  }
+    "wordCounter": "शब्द गणक",
+    "characterCount": "वर्ण गणना",
+    "wordCount": "शब्द गणना",
+    "sentenceCount": "वाक्य गणना",
+    "paragraphCount": "अनुच्छेद गणना",
+    "readingTime": "पढ़ने का समय",
+    "keywordDensity": "कीवर्ड घनत्व",
+    "clearText": "टेक्स्ट साफ़ करें",
+    "howToUse": "कैसे उपयोग करें",
+    "howToUseText": "तुरंत विश्लेषण प्राप्त करने के लिए बस ऊपर दिए गए टेक्स्ट क्षेत्र में टाइप करना या अपना टेक्स्ट पेस्ट करना शुरू करें। शब्द गणना, वर्ण गणना और अन्य मीट्रिक वास्तविक समय में अपडेट होंगे। आप प्रकाश और अंधेरे मोड के बीच भी स्विच कर सकते हैं, और इंटरफ़ेस की भाषा बदल सकते हैं।",
+    "about": "हमारे बारे में",
+    "aboutText": "यह शब्द गणक एप्लिकेशन आपके पाठ का विश्लेषण करने के लिए एक सरल और शक्तिशाली उपकरण है। यह आपको अपने लेखन को बेहतर ढंग से समझने में मदद करने के लिए विभिन्न प्रकार के मीट्रिक प्रदान करता है। चाहे आप एक छात्र, एक लेखक, या एक पेशेवर हों, यह उपकरण आपको अपने लेखन को बेहतर बनाने और अपने लक्ष्यों को पूरा करने में मदद कर सकता है।",
+    "contactUs": "हमसे संपर्क करें",
+    "contactText": "यदि आपके कोई प्रश्न, प्रतिक्रिया या सुझाव हैं, तो कृपया बेझिझक हमसे संपर्क करें। हमें आपसे सुनना अच्छा लगेगा!",
+    "nameLabel": "नाम",
+    "emailLabel": "ईमेल",
+    "messageLabel": "संदेश",
+    "submitButton": "प्रस्तुत",
+    "cookieConsent": {
+        "bannerText": "हम आपके अनुभव को बेहतर बनाने, ट्रैफ़िक का विश्लेषण करने और व्यक्तिगत विज्ञापन दिखाने के लिए कुकीज़ का उपयोग करते हैं। हमारी वेबसाइट का उपयोग करना जारी रखकर आप हमारी कुकी नीति के अनुसार कुकीज़ के उपयोग पर सहमति देते हैं।",
+        "acceptAll": "सभी को स्वीकार करें",
+        "customize": "अनुकूलन",
+        "rejectAll": "सभी को अस्वीकार करें",
+        "learnMore": "अधिक जानें"
+    },
+    "consentManagement": {
+        "title": "कुकी प्राथमिकताएं",
+        "description": "नीचे विभिन्न प्रकार की कुकीज़ के लिए अपनी सहमति प्राथमिकताएं प्रबंधित करें। बुनियादी कार्यक्षमता सुनिश्चित करने के लिए आवश्यक कुकीज़ हमेशा सक्षम होती हैं।",
+        "necessary": "आवश्यक कुकीज़",
+        "necessaryDescription": "ये कुकीज़ वेबसाइट के ठीक से काम करने के लिए आवश्यक हैं और इन्हें बंद नहीं किया जा सकता है। वे आमतौर पर तब सेट की जाती हैं जब आप ऐसी क्रियाएं करते हैं जो सेवाओं के अनुरोध के लिए बनती हैं, जैसे अपनी गोपनीयता प्राथमिकताएं सेट करना, लॉग इन करना, या फॉर्म भरना।",
+        "analytics": "विश्लेषिकी कुकीज़",
+        "analyticsDescription": "ये कुकीज़ हमें यातायात के स्रोतों की गिनती करने और मापने की अनुमति देती हैं ताकि हम अपनी साइट के प्रदर्शन को बेहतर बना सकें। वे हमें यह जानने में मदद करती हैं कि कौन से पृष्ठ सबसे अधिक और सबसे कम लोकप्रिय हैं और देखें कि आगंतुक साइट पर कैसे घूमते हैं।",
+        "advertising": "विज्ञापन कुकीज़",
+        "advertisingDescription": "हमारे विज्ञापन साझेदार हमारी साइट के माध्यम से ये कुकीज़ सेट कर सकते हैं और आपके लाभ के संबंधित विज्ञापन दिखाने के लिए आपकी रुचियों की एक प्रोफ़ाइल बनाने के लिए उपयोग कर सकते हैं। वे सीधे व्यक्तिगत जानकारी संग्रहीत नहीं करते हैं लेकिन आपके ब्राउज़र और इंटरनेट डिवाइस की विशिष्ट पहचान के आधार पर होते हैं।",
+        "rejectAll": "सभी को अस्वीकार करें",
+        "acceptAll": "सभी को स्वीकार करें",
+        "savePreferences": "प्राथमिकताएं सहेजें"
+    },
+    "privacyPolicy": "गोपनीयता नीति",
+    "privacyPolicyTitle": "गोपनीयता नीति - शब्द गणक उपकरण",
+    "privacyPolicyDescription": "जब आप हमारे नि: शुल्क शब्द गणक उपकरण का उपयोग करते हैं तो हम आपकी जानकारी को कैसे एकत्र करते हैं, उपयोग करते हैं और सुरक्षित रखते हैं, यह जानें।",
+    "effectiveDate": "प्रभावी तिथि",
+    "section1Title": "हम द्वारा एकत्र की गई जानकारी",
+    "noPersonalInformation": "जब आप हमारी वेबसाइट का उपयोग करते हैं तो हम आपके बारे में कोई व्यक्तिगत पहचान योग्य जानकारी एकत्र नहीं करते हैं। शब्द गणक उपकरण पूरी तरह से आपके वेब ब्राउज़र में संचालित होता है - सभी प्रसंस्करण आपके स्थानीय डिवाइस पर होता है।",
+    "section2Title": "हम जानकारी का उपयोग कैसे करते हैं",
+    "sinceNoInformation": "चूंकि हम कोई व्यक्तिगत जानकारी एकत्र नहीं करते हैं, हम आपके बारे में कोई व्यक्तिगत जानकारी का उपयोग नहीं करते हैं।",
+    "dataSecurity": "डेटा सुरक्षा",
+    "dataSecurityInfo": "आपका टेक्स्ट डेटा आपके ब्राउज़र में रहता है और कभी भी हमारे सर्वर या किसी तृतीय पक्ष को संचारित नहीं किया जाता है। जब आप हमारे शब्द गणक उपकरण का उपयोग करते हैं, तो आपका टेक्स्ट आपके स्थानीय डिवाइस पर रहता है और कहीं भी संग्रहीत नहीं होता है।",
+    "thirdPartyServices": "तृतीय पक्ष सेवाएं",
+    "thirdPartyInfo": "हम तृतीय पक्ष सेवाओं जैसे Google Analytics और Google AdSense का उपयोग कर सकते हैं। ये सेवाएं हमारी वेबसाइट के उपयोग के बारे में जानकारी एकत्र कर सकती हैं और आपकी ऑनलाइन गतिविधि को वेबसाइटों के पार ट्रैक करने के लिए कुकीज़ का उपयोग कर सकती हैं।",
+    "cookiesInfo": "कई वेबसाइटों की तरह, हम अपनी वेबसाइट पर गतिविधि को ट्रैक करने और कुछ जानकारी को संग्रहीत करने के लिए कुकीज़ और समान ट्रैकिंग प्रौद्योगिकियों का उपयोग करते हैं। हमारी वेबसाइट विभिन्न उद्देश्यों के लिए कुकीज़ का उपयोग करती है जिसमें मुख्य, विश्लेषिकी और विज्ञापन शामिल हैं।",
+    "changesToPolicy": "इस गोपनीयता नीति में परिवर्तन",
+    "changesInfo": "हम समय-समय पर हमारी गोपनीयता नीति को अपडेट कर सकते हैं। हम किसी भी परिवर्तन के बारे में आपको इस पृष्ठ पर नई गोपनीयता नीति पोस्ट करके सूचित करेंगे और इस पृष्ठ के शीर्ष पर प्रभावी तिथि को अपडेट करेंगे।",
+    "contactUs": "हमसे संपर्क करें",
+    "contactForQuestions": "यदि आपके पास इस गोपनीयता नीति के बारे में कोई प्रश्न है, तो कृपया हमारे माध्यम से हमसे संपर्क करें",
+    "page": "पृष्ठ",
+    "navigateOurSite": "हमारी साइट पर नेविगेट करें",
+    "freeWordCounterTool": "नि: शुल्क शब्द गणक उपकरण",
+    "aboutUs": "हमारे बारे में",
+    "writingResources": "लेखन संसाधन",
+    "termsOfService": "सेवा की शर्तें",
+    "contact": "संपर्क",
+    "cookies": "कुकीज़",
+    "english": "English",
+    "spanish": "Español",
+    "french": "Français",
+    "hindi": "हिन्दी",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "chinese": "中文"
 }
